# hackathon-2022-summer

./: README.md
docs/: categories-en.md  categories.md  technical-resources.md
teams/00-团队模板/: README.md
teams/01-bulldog/: README.md
teams/02-eclipse/: README.md
teams/02-eclipse/src/difttt-node/: Cargo.toml  Dockerfile  README.md
teams/02-eclipse/src/difttt-node/pallets/difttt/: Cargo.toml
teams/02-eclipse/src/difttt-node/pallets/difttt/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
teams/02-eclipse/src/email-task/: Dockerfile  README.md
teams/02-eclipse/src/evm-proxy/: Cargo.toml  README.md  config.yaml  token.json
teams/02-eclipse/src/evm-proxy/key/: eth_key
teams/02-eclipse/src/evm-proxy/src/: main.rs
teams/02-eclipse/src/frontend/: .gitignore  README.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
teams/02-eclipse/src/oracleprice/: Cargo.toml  Dockerfile  README.md  abi.json  type.json  type2.json  type3.json  type4.json
teams/02-eclipse/src/oracleprice/src/: main.rs
teams/03-cambio/: README.md
teams/04-云天通汇/: README.md
teams/04-云天通汇/src/: README.md  package.json  project.yaml
teams/05-Dante Network/: README.md
teams/05-Dante Network/demo/: README.md
teams/05-Dante Network/demo/interoperation/: README.md  moonbeamToNear.js  nearToMoonbeam.js  package-lock.json
teams/05-Dante Network/docs/: README.md
teams/05-Dante Network/docs/interoperation-demo/: .gitignore  .secret  .secret-example  README.md  package-lock.json  package.json  rinkebyToAstar.js
teams/05-Dante Network/src/: README.md
teams/07-捕鲸船/: README.md
teams/08-polket/: README.md  README_CN.md
teams/08-polket/docs/: README.md  README_CN.md
teams/08-polket/src/polket-node/: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  rust-toolchain
teams/08-polket/src/polket-node/node/: Cargo.toml
teams/08-polket/src/polket-node/node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
teams/08-polket/src/polket-node/pallets/buyback/: Cargo.toml
teams/08-polket/src/polket-node/pallets/buyback/src/: lib.rs  tests.rs
teams/08-polket/src/polket-node/pallets/identity-extra/: Cargo.toml
teams/08-polket/src/polket-node/pallets/identity-extra/src/: lib.rs  mock.rs  tests.rs
teams/08-polket/src/polket-node/pallets/unique-id/: Cargo.toml
teams/08-polket/src/polket-node/pallets/unique-id/src/: lib.rs  mock.rs  tests.rs
teams/08-polket/src/polket-node/pallets/vfe/: Cargo.toml
teams/08-polket/src/polket-node/pallets/vfe/src/: impl_nonfungibles.rs  lib.rs  mock.rs  tests.rs
teams/08-polket/src/polket-node/primitives/: Cargo.toml
teams/08-polket/src/polket-node/primitives/src/: lib.rs
teams/08-polket/src/polket-node/runtime/common/: Cargo.toml
teams/08-polket/src/polket-node/runtime/common/src/: lib.rs  origin.rs
teams/08-polket/src/polket-node/runtime/testnet/: Cargo.toml
teams/08-polket/src/polket-node/runtime/testnet/src/: constants.rs  lib.rs
teams/09-ease3/: README.md
teams/09-ease3/src/sub-push/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
teams/0x-Dante Network/: README.md
teams/12-Web3Hacker.Ninja/: README.md
teams/13-1in10k/: README.md
teams/13-1in10k/src/: abridgedCodes.sol
teams/14-Tommy/: README.md
teams/15-SubStake/: README.md
teams/15-SubStake/src/back-end/: .gitignore  DB_Info.md  asset_manager.py  dev_insert_block.py  dev_substrate_interface.py  server.py  staking.py
teams/15-SubStake/src/front-end/: App.js  README.md  package.json
teams/15-melody/: README.md
teams/16-AdMeta/: README-zh.md  README.md
teams/16-AdMeta/src/client/: package.json
teams/16-AdMeta/src/substrate/: README.md  docker-compose.yml
teams/16-AdMeta/src/substrate/pallets/common/: Cargo.toml
teams/16-AdMeta/src/substrate/pallets/common/src/: lib.rs
teams/16-AdMeta/src/substrate/runtime/: Cargo.toml
teams/16-AdMeta/src/substrate/runtime/src/: lib.rs
teams/17-StafiDAO/: README.md
teams/17-StafiDAO/docs/: MB-based StaFi DAO development solution-V3.docx  StaFi DAO design scheme.docx  StaFi DAO设计方案.docx  Stake Finance DAO Software Specifications.docx  Stake Finance DAO软件规格说明书.docx  基于MB的StaFi DAO开发方案-V3.docx  基于Moonbeam网络的StafiDAO-V2-演示版.pptx
teams/17-StafiDAO/src/automation/: pom.xml
teams/17-StafiDAO/src/contracts/: Airdrop.sol  AuthorMappingInterface.sol  ERC20.sol  Factory.sol  Faucet.sol  Pool.sol  Search.sol
teams/17-StafiDAO/src/web/: README.md  package-lock.json  package.json  vue.config.js
teams/18-Avault/: README.md
teams/18-Avault/src/avault-contracts/: hardhat.config.ts  package.json
teams/18-Avault/src/avault-shiden-web/: 1155.json  README.md  hardhat.config.ts  package.json  tsconfig.json
teams/19-BootstrapNFT/: README.md
teams/19-BootstrapNFT/src/BootstrapNFT/: .env.development  craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
teams/20-ADVAITA/: README.md
teams/20-ADVAITA/src/: README.md  gcyy.php  reward.sol  upload_ipfs.php
teams/20-ADVAITA/src/scaffold-eth/: .gitignore  package.json
teams/21-Diora Network/: README.md
teams/21-Diora Network/src/: .gitignore  README.md  rococo-local-cfde.json
teams/21-Diora Network/src/node/: Cargo.toml
teams/21-Diora Network/src/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
teams/21-Diora Network/src/pallets/ethereum-chain-id/: Cargo.toml
teams/21-Diora Network/src/pallets/ethereum-chain-id/src/: lib.rs
teams/21-Diora Network/src/polkadot-launch/: config.json
teams/21-Diora Network/src/runtime/: Cargo.toml
teams/21-zero2one/: README.md
teams/22-zero2one/: README.md
teams/23-南大*上贸大*NonceGeek/: README.md
teams/23-南大*上贸大*NonceGeek/docs/: SoulCard Introduction.md  SoulCard Introduction_CN.md
teams/25-DeepShallow/: README.md
teams/25-DeepShallow/docs/: 25-DEEP SHALLOW 《Warpgate》.pptx
teams/A D V A I T A/: README.md
teams/A D V A I T A/src/: NFTToken.sol  TokenReward.sol
teams/Avault/: README.md
teams/Deep Shallow/: README.md
teams/RADIAN/: README.md
teams/makerGame/: README.md
(+1944 files in other folders)
