[package]
name = "polket-primitives"
version = "0.1.0"
authors = ['Polket <https://www.polket.io>']
edition = "2018"

[dependencies]
serde = { version = "1.0.119", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
scale-info = { default-features = false, features = ['derive'], version = '1.0'}
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-11', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-11', default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-11', default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = 'monthly-2021-11', default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
	"scale-info/std",
]
