[package]
name = 'runtime-common'
version = '0.1.0'
edition = '2018'
license = "GPL-3.0-or-later"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
scale-info = { default-features = false, features = ['derive'], version = '1.0' }
static_assertions = "1.1.0"

frame-benchmarking = { default-features = false, git = 'https://github.com/paritytech/substrate.git', optional = true, tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-io = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-11', version = '4.0.0-dev' }
pallet-uniques = { git = 'https://github.com/paritytech/substrate.git', default-features = false, tag = 'monthly-2021-11', version = '4.0.0-dev' }

# local libraries
polket-primitives = { default-features = false, path = '../../primitives' }
pallet-support = { default-features = false, path = '../../pallets/support' }
pallet-identity-extra = { default-features = false, path = '../../pallets/identity-extra' }

[features]
default = ['std']
runtime-benchmarks = [
    "frame-benchmarking",
    "sp-runtime/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-core/std',
    'sp-io/std',
    'sp-std/std',
    'pallet-uniques/std',
    'pallet-support/std',
	'pallet-identity-extra/std',
    'polket-primitives/std',

]
try-runtime = ['frame-support/try-runtime']
